--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,38 +2,31 @@
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",*:Tc"
 
-# Configure the default shell
-set -g default-shell $SHELL
-
-# Increase scrollback buffer size
-set -g history-limit 100000
-
-# Source config binding
-unbind r
-bind r source-file ~/.tmux.conf
+# Address vim mode switching delay
+set -sg escape-time 0
 
 # Enable mouse mode
 set -g mouse on
 
 # Start windows and panes at 1
 set -g base-index 1
-set -g pane-base-index 1
 set -g renumber-windows on
 
 # Status bar configuration
 set-option -g status-position top
+set-option -g status-justify left
 set-option -g status-bg default
 set-option -g status-fg colour252
-set-option -g status-justify left
 set-option -g window-status-format "#[fg=colour244]#I:#W"
 set-option -g window-status-current-format "#[bg=colour240,fg=colour0,bold] #I:#W* "
 set-option -g status-right-length 200
 set -g status-left "[Sess:#S] "
-set -g status-right "#{prefix_highlight} #{s|/Users/huyvo|~|:pane_current_path} ⦁ %A %b %d %I:%M %p ϟ #{battery_percentage}"
+set -g status-right "#{prefix_highlight} #{s|/Users/huyvo|~|:pane_current_path} . %A %b %d %I:%M %p ϟ #{battery_percentage}"
 
 # Panes settings
 set -g pane-border-style bg=default,fg=colour238
 set -g pane-active-border bg=default,fg=colour42
+
 unbind %
 bind b split-window -v -c "#{pane_current_path}"
 unbind '"'
@@ -46,18 +39,21 @@ bind C-l send-keys 'C-l'
 
 # Use vi(m) key bindings
 setw -g mode-keys vi
-
-# Address vim mode switching delay
-set -sg escape-time 0
-
-# Enter copy-mode with vim key bindings
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
 bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy"
+
+bind-key -n M-1 select-window -t :1
+bind-key -n M-2 select-window -t :2
+bind-key -n M-3 select-window -t :3
+bind-key -n M-4 select-window -t :4
+bind-key -n M-5 select-window -t :5
+bind-key -n M-6 select-window -t :6
+bind-key -n M-7 select-window -t :7
+bind-key -n M-8 select-window -t :8
+bind-key -n M-9 select-window -t :9
 
 # tmux-prefix-highlight
 set -g @prefix_highlight_bg default
