--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -19,7 +19,9 @@ brew "cmake"
 brew "coreutils"
 brew "curl"
 brew "eigen"
+brew "exa"
 brew "exercism"
+brew "fd"
 brew "fzf"
 brew "gcc@6"
 brew "geos"
@@ -58,11 +60,13 @@ brew "sdl_mixer"
 brew "sdl_ttf"
 brew "stow"
 brew "tig"
+brew "tldr"
 brew "tmux"
 brew "ttfautohint"
 brew "vim"
 brew "watchman"
 brew "wget"
+brew "zlib"
 brew "zplug"
 brew "zsh"
 brew "caryll/tap/otfcc-mac64"
