--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,11 +21,11 @@ set-option -g window-status-format "#[fg=colour244]#I:#W"
 set-option -g window-status-current-format "#[bg=colour240,fg=colour0,bold] #I:#W* "
 set-option -g status-right-length 200
 set -g status-left "[Sess:#S] "
-set -g status-right "#{prefix_highlight} #{s|/Users/huyvo|~|:pane_current_path} . %A %b %d %I:%M %p ϟ #{battery_percentage}"
+set -g status-right "#{prefix_highlight} #{s|/Users/huyvo|~|:pane_current_path} . %a %b %d %I:%M %p ϟ #{battery_percentage}"
 
 # Panes settings
-set -g pane-border-style bg=default,fg=colour238
-set -g pane-active-border bg=default,fg=colour42
+set -g pane-border-style bg=default,fg=colour236
+set -g pane-active-border bg=default,fg=colour236
 
 unbind %
 bind b split-window -v -c "#{pane_current_path}"
