Increase scrollback buffer size

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,9 @@ set -sg escape-time 0
 # Enable mouse mode
 set -g mouse on
 
+# Increase scrollback buffer size
+set-option -g history-limit 5000
+
 # Start windows and panes at 1
 set -g base-index 1
 set -g renumber-windows on
