--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,7 +24,7 @@ set-option -g window-status-format "#[fg=colour244]#I:#W"
 set-option -g window-status-current-format "#[bg=colour240,fg=colour0,bold] #I:#W* "
 set-option -g status-right-length 200
 set -g status-left "[Sess:#S] "
-set -g status-right "#{prefix_highlight} #{s|/Users/huyvo|~|:pane_current_path} . %a %b %d %I:%M %p ϟ #{battery_percentage}"
+set -g status-right "#{prefix_highlight} %A %d/%m/%y %I:%M %p | Batt:#{battery_percentage}"
 
 # Panes settings
 set -g pane-border-style bg=default,fg=colour236
