--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -32,8 +32,6 @@ brew "git"
 brew "gnupg"
 brew "graphviz"
 brew "htop"
-brew "hub"
-brew "hugo"
 brew "imagemagick@6", link: true
 brew "jq"
 brew "libidn"
@@ -41,6 +39,7 @@ brew "libmikmod"
 brew "libuv"
 brew "libyaml"
 brew "mit-scheme"
+brew "neovim"
 brew "ninja"
 brew "nnn"
 brew "pinentry-mac"
@@ -59,7 +58,6 @@ brew "sdl_mixer"
 brew "sdl_ttf"
 brew "stow"
 brew "tig"
-brew "tldr"
 brew "tmux"
 brew "ttfautohint"
 brew "vim"
@@ -70,5 +68,4 @@ brew "zplug"
 brew "zsh"
 brew "caryll/tap/otfcc-mac64"
 brew "universal-ctags/universal-ctags/universal-ctags", args: ["HEAD"]
-cask "font-hack-nerd-font"
 cask "react-native-debugger"
