Use status-style instead

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,8 +18,7 @@ set -g renumber-windows on
 # Status bar configuration
 set-option -g status-position top
 set-option -g status-justify left
-set-option -g status-bg default
-set-option -g status-fg colour252
+set-option -g status-style bg=default,fg=colour252
 set-option -g window-status-format "#[fg=colour244]#I:#W"
 set-option -g window-status-current-format "#[bg=colour240,fg=colour0,bold] #I:#W* "
 set-option -g status-right-length 200
