--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -37,8 +37,8 @@ brew "libidn"
 brew "libmikmod"
 brew "libuv"
 brew "libyaml"
+brew "luajit", args: ["HEAD"]
 brew "mit-scheme"
-brew "neovim"
 brew "ninja"
 brew "nnn"
 brew "pinentry-mac"
