Update status bar once again

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,10 +20,7 @@ set-option -g status-position top
 set-option -g status-justify left
 set-option -g status-style bg=default,fg=colour252
 set-option -g window-status-format "#[fg=colour244]#I:#W"
-set-option -g window-status-current-format "#[bg=colour240,fg=colour0,bold] #I:#W* "
-set-option -g status-right-length 200
-set -g status-left "[Sess:#S] "
-set -g status-right "#{prefix_highlight} %A %d/%m/%y %I:%M %p | Batt: #{battery_percentage}"
+set -g status-right "#{prefix_highlight} %A %d/%m %I:%M %p [#{battery_percentage}]"
 
 # Panes settings
 set -g pane-border-style bg=default,fg=colour236
