--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,7 +19,8 @@ set -g renumber-windows on
 set-option -g status-position top
 set-option -g status-justify left
 set-option -g status-style bg=default,fg=colour252
-set-option -g window-status-format "#[fg=colour244]#I:#W"
+set-option -g window-status-style fg=colour244
+set-option -g window-status-current-style fg=colour252
 set -g status-right "#{prefix_highlight} %A %d/%m %I:%M %p [#{battery_percentage}]"
 
 # Panes settings
@@ -32,6 +33,13 @@ unbind '"'
 bind v split-window -h -c "#{pane_current_path}"
 unbind x
 bind x kill-pane
+
+bind-key -r < swap-window -t -1
+bind-key -r > swap-window -t +1
+bind-key -r H resize-pane -L 10
+bind-key -r J resize-pane -D 10
+bind-key -r K resize-pane -U 10
+bind-key -r L resize-pane -R 10
 
 # Restoring Clear Screen (C-l)
 bind C-l send-keys 'C-l'
@@ -63,5 +71,4 @@ set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'huyvohcmc/tmux-less-control'
 run "~/.tmux/plugins/tpm/tpm"
