--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,6 +33,7 @@ unbind '"'
 bind v split-window -h -c "#{pane_current_path}"
 unbind x
 bind x kill-pane
+bind-key "c" new-window -c "#{pane_current_path}"
 
 bind-key -r < swap-window -t -1
 bind-key -r > swap-window -t +1
