Open url in browser when clicking

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -375,7 +375,7 @@ live_config_reload: true
   # Record all characters and escape sequences as test data.
   #ref_test: false
 
-#mouse:
+mouse:
   # Click settings
   #
   # The `double_click` and `triple_click` settings control the time
@@ -387,7 +387,7 @@ live_config_reload: true
   # If this is `true`, the cursor is temporarily hidden when typing.
   #hide_when_typing: false
 
-  #url:
+  url:
     # URL launcher
     #
     # This program is executed when clicking on a text which is recognized as a URL.
@@ -399,9 +399,9 @@ live_config_reload: true
     #   - (macOS) open
     #   - (Linux) xdg-open
     #   - (Windows) explorer
-    #launcher:
-    #  program: xdg-open
-    #  args: []
+    launcher:
+      program: open
+      args: []
 
     # URL modifiers
     #
