Enable dynamic padding

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -38,7 +38,7 @@ window:
   #  y: 0
 
   # Spread additional padding evenly around the terminal content.
-  #dynamic_padding: false
+  dynamic_padding: true
 
   # Window decorations
   #
