Add iceberg theme

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -171,6 +171,31 @@ font:
 draw_bold_text_with_bright_colors: true
 
 schemes:
+  iceberg: &iceberg
+    primary:
+      background: '0x161821'
+      foreground: '0xd2d4de'
+    cursor:
+      text:   '0x161821'
+      cursor: '0xd2d4de'
+    normal:
+      black:   '0x161821'
+      red:     '0xe27878'
+      green:   '0xb4be82'
+      yellow:  '0xe2a478'
+      blue:    '0x84a0c6'
+      magenta: '0xa093c7'
+      cyan:    '0x89b8c2'
+      white:   '0xc6c8d1'
+    bright:
+      black:   '0x6b7089'
+      red:     '0xe98989'
+      green:   '0xc0ca8e'
+      yellow:  '0xe9b189'
+      blue:    '0x91acd1'
+      magenta: '0xada0d3'
+      cyan:    '0x95c4ce'
+      white:   '0xd2d4de'
   taerminal: &taerminal
     primary:
       background: '0x000000'
@@ -254,7 +279,7 @@ schemes:
       - { index: 20, color: '0xa5a5a9' }
       - { index: 21, color: '0xeff0eb' }
 
-colors: *snazzy
+colors: *iceberg
 
 # Visual Bell
 #
