--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -24,10 +24,12 @@ brew "gcc@6"
 brew "geos"
 brew "git"
 brew "gnupg"
-brew "python"
+brew "harfbuzz"
 brew "libtool"
 brew "graphviz"
 brew "htop"
+brew "httpie"
+brew "libheif"
 brew "imagemagick"
 brew "jq"
 brew "libidn"
