--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -100,7 +100,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    family: Iosevka Fixed
+    family: Iosevka
 
     # The `style` can be specified to pick a specific face.
     style: Regular
