--- a/git/.gitignore
+++ b/git/.gitignore
@@ -1,12 +1,10 @@
-**/.DS_Store
+.DS_Store
+.DS_Store?
 *.sw[nop]
 .Trashes
 .bundle
 .byebug_history
 .env
-db/*.sqlite3
-log/*.log
-rerun.txt
 tags
 tags.lock
 tags.temp
@@ -14,3 +12,20 @@ tags.temp
 tmp/**/*
 !tmp/cache/.keep
 *.pyc
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+*.log
+*.sql
+*.sqlite
