Update brew bundle

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -1,75 +1,26 @@
-tap "caryll/tap"
-tap "github/gh"
 tap "homebrew/bundle"
 tap "homebrew/cask"
-tap "homebrew/cask-fonts"
 tap "homebrew/core"
 tap "homebrew/services"
 tap "jesseduffield/lazygit"
 tap "universal-ctags/universal-ctags"
-brew "autoconf"
 brew "automake"
-brew "gettext"
-brew "openssl@1.1"
-brew "readline"
-brew "sqlite"
-brew "python@3.8"
-brew "cairo"
 brew "cmake"
-brew "coreutils"
-brew "curl"
-brew "eigen"
-brew "exercism"
 brew "fzf"
-brew "gcc@6"
-brew "geos"
+brew "gettext"
 brew "git"
-brew "gnupg"
-brew "harfbuzz"
-brew "libtool"
-brew "graphviz"
 brew "htop"
 brew "httpie"
-brew "libheif"
+brew "libtool"
 brew "imagemagick"
-brew "jq"
-brew "libidn"
-brew "libmikmod"
-brew "libpq"
-brew "libuv"
-brew "libxml2"
-brew "libyaml"
-brew "luajit", args: ["HEAD"]
+brew "lua"
 brew "mit-scheme"
-brew "navi"
 brew "ninja"
-brew "nnn"
-brew "pinentry-mac"
 brew "pkg-config"
-brew "portmidi"
-brew "postgresql@9.4", restart_service: true, link: true
-brew "ruby-build"
-brew "rbenv"
+brew "postgresql", restart_service: true
 brew "redis", restart_service: true
 brew "ripgrep"
-brew "ruby"
-brew "sdl"
-brew "sdl2"
-brew "sdl_image"
-brew "sdl_mixer"
-brew "sdl_ttf"
 brew "stow"
 brew "tmux"
-brew "ttfautohint"
-brew "vim"
-brew "watchman"
-brew "wget"
-brew "zlib"
-brew "zplug"
-brew "zsh"
-brew "caryll/tap/otfcc-mac64"
-brew "github/gh/gh"
 brew "jesseduffield/lazygit/lazygit"
 brew "universal-ctags/universal-ctags/universal-ctags", args: ["HEAD"]
-cask "brooklyn"
-cask "react-native-debugger"
