Re-install python@3.8

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -6,6 +6,7 @@ tap "jesseduffield/lazygit"
 tap "universal-ctags/universal-ctags"
 brew "automake"
 brew "cmake"
+brew "python@3.8"
 brew "fzf"
 brew "gettext"
 brew "git"
