--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,6 @@
 # Improve color
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",*:Tc"
 
 # Address vim mode switching delay
 set -sg escape-time 0
