--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -171,6 +171,31 @@ font:
 draw_bold_text_with_bright_colors: true
 
 schemes:
+  plain: &plain
+    primary:
+      background: '#111111'
+      foreground: '#c5c8c6'
+    cursor:
+      text: '#161821'
+      cursor: '#20bbfc'
+    normal:
+      black: '#1d1f21'
+      red: '#cc6666'
+      green: '#b5bd68'
+      yellow: '#f0c674'
+      blue: '#81a2be'
+      magenta: '#b294bb'
+      cyan: '#8abeb7'
+      white: '#c5c8c6'
+    bright:
+      black: '#333333'
+      red: '#f2777a'
+      green: '#99cc99'
+      yellow: '#ffcc66'
+      blue: '#6699cc'
+      magenta: '#cc99cc'
+      cyan: '#66cccc'
+      white: '#dddddd'
   iceberg: &iceberg
     primary:
       background: '0x161821'
@@ -221,65 +246,8 @@ schemes:
       magenta: '0xffc6ff'
       cyan:    '0xc0e9f8'
       white:   '0xffffff'
-  material: &material
-    primary:
-      background: '0x000000'
-      foreground: '0xeeffff'
-    cursor:
-      text: '0x212121'
-      cursor: '0xeeffff'
-    normal:
-      black:   '0x212121'
-      red:     '0xf07178'
-      green:   '0xc3e88d'
-      yellow:  '0xffcb6b'
-      blue:    '0x82aaff'
-      magenta: '0xc792ea'
-      cyan:    '0x89ddff'
-      white:   '0xeeffff'
-    bright:
-      black:   '0x4a4a4a'
-      red:     '0xf07178'
-      green:   '0xc3e88d'
-      yellow:  '0xffcb6b'
-      blue:    '0x82aaff'
-      magenta: '0xc792ea'
-      cyan:    '0x89ddff'
-      white:   '0xffffff'
-  snazzy: &snazzy
-    primary:
-      background: '0x000000'
-      foreground: '0xe2e4e5'
-    cursor:
-      text: '0x282a36'
-      cursor: '0xe2e4e5'
-    normal:
-      black:   '0x282a36'
-      red:     '0xff5c57'
-      green:   '0x5af78e'
-      yellow:  '0xf3f99d'
-      blue:    '0x57c7ff'
-      magenta: '0xff6ac1'
-      cyan:    '0x9aedfe'
-      white:   '0xe2e4e5'
-    bright:
-      black:   '0x78787e'
-      red:     '0xff5c57'
-      green:   '0x5af78e'
-      yellow:  '0xf3f99d'
-      blue:    '0x57c7ff'
-      magenta: '0xff6ac1'
-      cyan:    '0x9aedfe'
-      white:   '0xf1f1f0'
-    indexed_colors:
-      - { index: 16, color: '0xff9f43' }
-      - { index: 17, color: '0xb2643c' }
-      - { index: 18, color: '0x34353e' }
-      - { index: 19, color: '0x43454f' }
-      - { index: 20, color: '0xa5a5a9' }
-      - { index: 21, color: '0xeff0eb' }
 
-colors: *iceberg
+colors: *plain
 
 # Visual Bell
 #
