--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -179,14 +179,22 @@ schemes:
       text: '#161821'
       cursor: '#20bbfc'
     normal:
-      black: '#1d1f21'
-      red: '#cc6666'
-      green: '#b5bd68'
-      yellow: '#f0c674'
-      blue: '#81a2be'
-      magenta: '#b294bb'
-      cyan: '#8abeb7'
-      white: '#c5c8c6'
+      # black: '#1d1f21'
+      # red: '#cc6666'
+      # green: '#b5bd68'
+      # yellow: '#f0c674'
+      # blue: '#81a2be'
+      # magenta: '#b294bb'
+      # cyan: '#8abeb7'
+      # white: '#c5c8c6'
+      black: '#333333'
+      red: '#f2777a'
+      green: '#99cc99'
+      yellow: '#ffcc66'
+      blue: '#6699cc'
+      magenta: '#cc99cc'
+      cyan: '#66cccc'
+      white: '#dddddd'
     bright:
       black: '#333333'
       red: '#f2777a'
