--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -5,6 +5,7 @@ tap "homebrew/services"
 tap "jesseduffield/lazygit"
 tap "universal-ctags/universal-ctags"
 brew "automake"
+brew "bat"
 brew "cmake"
 brew "python@3.8"
 brew "fzf"
