--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -168,7 +168,7 @@ font:
   use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
-draw_bold_text_with_bright_colors: true
+draw_bold_text_with_bright_colors: false
 
 schemes:
   plain: &plain
@@ -179,14 +179,14 @@ schemes:
       text: '#161821'
       cursor: '#85e89d'
     normal:
-      black: '#333333'
-      red: '#f2777a'
-      green: '#99cc99'
-      yellow: '#ffcc66'
-      blue: '#6699cc'
-      magenta: '#cc99cc'
-      cyan: '#66cccc'
-      white: '#dddddd'
+      black: '#1d1f21'
+      red: '#cc6666'
+      green: '#b5bd68'
+      yellow: '#f0c674'
+      blue: '#81a2be'
+      magenta: '#b294bb'
+      cyan: '#8abeb7'
+      white: '#c5c8c6'
     bright:
       black: '#333333'
       red: '#f2777a'
