--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -181,7 +181,7 @@ schemes:
     normal:
       black: '#1d1f21'
       red: '#cc6666'
-      green: '#b5bd68'
+      green: '#8aac8b'
       yellow: '#f0c674'
       blue: '#81a2be'
       magenta: '#b294bb'
