--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -5,15 +5,16 @@ tap "homebrew/services"
 tap "jesseduffield/lazygit"
 tap "universal-ctags/universal-ctags"
 brew "automake"
-brew "bat"
 brew "cmake"
 brew "python@3.8"
 brew "fzf"
 brew "gettext"
 brew "git"
 brew "glib"
+brew "gron"
 brew "htop"
 brew "httpie"
+brew "hugo"
 brew "libtool"
 brew "imagemagick"
 brew "lua"
